Fixed product-grid alignment

--- a/src/sass/partials/product_grid.sass
+++ b/src/sass/partials/product_grid.sass
@@ -2,6 +2,7 @@
   margin: 2rem 0
   display: flex
   flex-wrap: wrap
+  align-items: center
   // justify-content: space-between
   .tease-product
     flex: 0 0 33%
